N°4420 N°4421 Table selectable lines : restore style, restore script inclusion in object edition (#242)

--- a/css/backoffice/components/_datatable.scss
+++ b/css/backoffice/components/_datatable.scss
@@ -14,6 +14,9 @@ $ibo-datatable-header--text-color: $ibo-base-variable--text-color !default;
 $ibo-datatable-panel--table-spacing: 48px !default;
 $ibo-datatable-panel--body--padding: $ibo-panel--body--padding-top 0px $ibo-panel--body--padding-bottom !default;
 
+$ibo-datatable--row--background-color--is-hover: $ibo-color-primary-200 !default;
+$ibo-datatable--row--background-color--is-selected: $ibo-color-primary-300 !default;
+
 $ibo-datatable--selection-validation-buttons-toolbar--margin-top: 10px !default;
 $ibo-list-column--max-height: 150px !default;
 
@@ -91,6 +94,7 @@ $ibo-fieldsorter--selected--background-color: $ibo-color-blue-200 !default;
   &.ibo-is-ascending::after{
     content: '\f0de';
   }
+
   &.ibo-is-none::after{
     content: '\f0dc';
   }
@@ -99,5 +103,21 @@ $ibo-fieldsorter--selected--background-color: $ibo-color-blue-200 !default;
 .itop-fieldsorter{
   >.selected{
     background-color: $ibo-fieldsorter--selected--background-color;
+  }
+}
+
+
+.ibo-datatable {
+  tbody > tr {
+    transition: background-color 400ms linear;
+
+    &:hover, &.selected:hover {
+      cursor: pointer;
+      background-color: $ibo-datatable--row--background-color--is-hover;
+    }
+
+    &.selected {
+      background-color: $ibo-datatable--row--background-color--is-selected;
+    }
   }
 }
