N°4283 - Improve textarea and OQL inputs style - All textarea app. wide avec the same padding - OQL fields have the same padding as the other textareas - OQL fields have the monospaced font

--- a/css/backoffice/components/input/_input-text.scss
+++ b/css/backoffice/components/input/_input-text.scss
@@ -17,6 +17,6 @@ $ibo-input-text--padding-y: 10px !default;
   min-height: 15em;
 }
 
-textarea.ibo-queryoql, .ibo-queryoql:not(:nth-child(n)), .ibo-queryoql > :not(.ibo-field--label) {
+.ibo-query-oql, .ibo-query-oql > :not(.ibo-field--label) {
   @extend %ibo-font-code-150;
 }
