--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -165,6 +165,7 @@ $ibo-field--enable-bulk--checkbox--margin-left: 8px !default;
   min-width: 100px;
   max-width: 145px;
   width: 30%;
+  word-break: break-word; /* We want labels to wrap if it is very long if it has no spaces */
   @extend %ibo-font-weight-600;
 
   > .ibo-has-description {
