--- a/css/backoffice/components/input/_input-text.scss
+++ b/css/backoffice/components/input/_input-text.scss
@@ -3,11 +3,13 @@
  * @license     http://opensource.org/licenses/AGPL-3.0
  */
 
+$ibo-input-text--width: 100% !default;
 $ibo-input-text--min-height: 12rem !default;
 $ibo-input-text--padding-x: 12px !default;
 $ibo-input-text--padding-y: 10px !default;
 
 .ibo-input-text {
+  width: $ibo-input-text--width;
   min-height: $ibo-input-text--min-height;
   padding: $ibo-input-text--padding-y $ibo-input-text--padding-x;
 }
