--- a/css/backoffice/components/input/_input-text.scss
+++ b/css/backoffice/components/input/_input-text.scss
@@ -12,13 +12,17 @@ $ibo-input-text--padding-y: 10px !default;
   width: $ibo-input-text--width;
   min-height: $ibo-input-text--min-height;
   padding: $ibo-input-text--padding-y $ibo-input-text--padding-x;
+
+  &.ibo-is-code {
+    @extend %ibo-font-code-150;
+    /* Note: There is a mic-mac in the inputs SCSS partials / PHP classes / TWIG templates. All base style should be defined in a common ancestor (AbstractInput) which should have its own BLOCK_CODE and SCSS partial; which is not the case right now.
+     * We should correct this later as now is too close to the RC to make such changes.
+     */
+    background-color: $ibo-input--background-color;
+  }
 }
 
 .ibo-input-text--export {
   width: 100%;
   min-height: 15em;
-}
-
-.ibo-query-oql, .ibo-query-oql > :not(.ibo-field--label) {
-  @extend %ibo-font-code-150;
 }
