--- a/templates/base/layouts/object/object-details/layout.js.twig
+++ b/templates/base/layouts/object/object-details/layout.js.twig
@@ -18,7 +18,7 @@
                 oFavoriteButton[0].click();
             }
             else{
-                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-uid="UI:Menu:Modify"]');
+                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-resource-id="UI:Menu:Modify"]');
                 if(oPopupItemButton[0]){
                     oPopupItemButton[0].click();
                 }
@@ -31,7 +31,7 @@
                 oFavoriteButton[0].click();
             }
             else{
-                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-uid="UI:Menu:Delete"]');
+                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-resource-id="UI:Menu:Delete"]');
                 if(oPopupItemButton[0]){
                     oPopupItemButton[0].click();
                 }
@@ -44,7 +44,7 @@
                 oFavoriteButton[0].click();
             }
             else{
-                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-uid="UI:Menu:New"]');
+                let oPopupItemButton = $('[data-role="ibo-popover-menu"]').find('[data-resource-id="UI:Menu:New"]');
                 if(oPopupItemButton[0]){
                     oPopupItemButton[0].click();
                 }
