--- a/css/backoffice/components/_field.scss
+++ b/css/backoffice/components/_field.scss
@@ -48,26 +48,22 @@ $ibo-field--enable-bulk--checkbox--margin-left: 8px !default;
 
   /* Avoid value to overflow from its container with very long strings (typically URLs) */
   /* Note: Some types of attribute must be excluding as it can alter their rendering    */
-  &:not([data-attribute-type="AttributeBlob"])
-  &:not([data-attribute-type="AttributeFile"])
-  &:not([data-attribute-type="AttributeImage"])
-  &:not([data-attribute-type="AttributeCustomFields"])
-  &:not([data-attribute-type="AttributeTagSet"])
-  &:not([data-attribute-type="AttributeEnumSet"])
-  &:not([data-attribute-type="AttributeClassAttCodeSet"])
-  &:not([data-attribute-type="AttributeQueryAttCodeSet"])
-  &:not(.ibo-input-file-select--container) {
-    /* We need the rule to apply for the class and all its descendants, hence the "&, & *" */
+  &:not([data-attribute-type="AttributeBlob"]):not([data-attribute-type="AttributeFile"]):not([data-attribute-type="AttributeImage"]):not([data-attribute-type="AttributeCustomFields"]):not([data-attribute-type="AttributeTagSet"]):not([data-attribute-type="AttributeEnumSet"]):not([data-attribute-type="AttributeClassAttCodeSet"]):not([data-attribute-type="AttributeQueryAttCodeSet"]):not(.ibo-input-file-select--container) {
+    /* We need the rule to apply for the class and all its descendants, hence the "& *" */
     .ibo-field--value {
-      &, & * {
+      word-break: break-word;
+      white-space: inherit; /* Here we don't put break-spaces as it would put ".ibo-field-small .ibo-field-value" on a new line due to the spaces/indentation of the HTML templates. For now we rather have this rule than diminish the templates readability/maintenability */
+      & * {
         word-break: break-word;
-        white-space: inherit; /* Here we don't put break-spaces as it would put ".ibo-field-small .ibo-field-value" on a new line due to the spaces/indentation of the HTML templates. For now we rather have this rule than diminish the templates readability/maintenability */
+        white-space: inherit;
       }
     }
     &.ibo-field-large {
+      /* We need the rule to apply for the class and all its descendants, hence the "& *" */
       .ibo-field--value {
-        &, & * {
-          white-space: break-spaces; /* For large fields we don't have the issue stated above */
+        white-space: break-spaces; /* For large fields we don't have the issue stated above */
+        & * {
+          white-space: break-spaces;
         }
       }
     }
@@ -191,17 +187,10 @@ $ibo-field--enable-bulk--checkbox--margin-left: 8px !default;
   /* Note that along with with, we now display a "expand" icon on large fields so we can have a better view of its content */
   .HTML {
     @extend .ibo-vendors-ckeditor--display-content;
-    display: grid;
 
     table {
       table-layout: fixed;
       width: 100%;
-
-      /* N°2788 - Force table to wrap as much as they can in the object details, otherwise it overflows on the other columns. We do this terrible hack only here as this is due to how the columns / fieldsets works. We might have the opportunity to improve it one day. */
-      * {
-        white-space: break-spaces;
-        word-break: break-all;
-      }
     }
   }
 }
@@ -212,7 +201,6 @@ $ibo-field--enable-bulk--checkbox--margin-left: 8px !default;
 
 /* For log fields in the bulk operation screens */
 .ibo-fieldset-legend > .ibo-field--comments {
-//  display: contents;
   padding-bottom: $ibo-field--value--margin-top--for-large;
   font-size: $ibo-field--comments--font-size;
 }
