--- a/css/backoffice/utils/variables/colors/_base-palette.scss
+++ b/css/backoffice/utils/variables/colors/_base-palette.scss
@@ -18,6 +18,7 @@ $ibo-color-grey-600: hsla(215, 16.6%, 63.3%, 1) !default;
 $ibo-color-grey-700: hsla(214, 11.3%, 48.6%, 1) !default;
 $ibo-color-grey-800: hsla(215, 16.9%, 30.2%, 1) !default;
 $ibo-color-grey-900: hsla(215, 22.4%, 16.7%, 1) !default;
+$ibo-color-grey-950: hsla(215, 26.4%, 10.7%, 1) !default;
 
 $ibo-color-blue-grey-50: hsla(210, 36%, 96%, 1) !default;
 $ibo-color-blue-grey-100: hsla(198, 15.7%, 83.7%, 1) !default;
@@ -29,6 +30,7 @@ $ibo-color-blue-grey-600: hsla(199, 18.4%, 40.4%, 1) !default;
 $ibo-color-blue-grey-700: hsla(199, 18.3%, 33.1%, 1) !default;
 $ibo-color-blue-grey-800: hsla(200, 17.9%, 26.3%, 1) !default;
 $ibo-color-blue-grey-900: hsla(200, 19.1%, 18.4%, 1) !default;
+$ibo-color-blue-grey-950: hsla(200, 20.2%, 13.1%, 1) !default;
 
 $ibo-color-blue-100: hsla(201, 100%, 96.1%, 1) !default;
 $ibo-color-blue-200: hsla(202, 80.6%, 85.9%, 1) !default;
@@ -39,6 +41,7 @@ $ibo-color-blue-600: hsla(209, 61.6%, 50%, 1) !default;
 $ibo-color-blue-700: hsla(211, 60.7%, 42.9%, 1) !default;
 $ibo-color-blue-800: hsla(213, 49.4%, 34.1%, 1) !default;
 $ibo-color-blue-900: hsla(215, 41.3%, 28%, 1) !default;
+$ibo-color-blue-950: hsla(215, 36.8%, 23%, 1) !default;
 
 $ibo-color-cyan-100: hsla(186, 61.2%, 86.9%, 1) !default;
 $ibo-color-cyan-200: hsla(187, 71.6%, 71%, 1) !default;
@@ -49,6 +52,7 @@ $ibo-color-cyan-600: hsla(187, 100%, 37.8%, 1) !default;
 $ibo-color-cyan-700: hsla(186, 100%, 32.7%, 1) !default;
 $ibo-color-cyan-800: hsla(185, 100%, 28%, 1) !default;
 $ibo-color-cyan-900: hsla(182, 100%, 19.6%, 1) !default;
+$ibo-color-cyan-950: hsla(180, 100%, 10.6%, 1) !default;
 
 $ibo-color-green-100: hsla(88, 50.7%, 85.7%, 1) !default;
 $ibo-color-green-200: hsla(88, 50%, 76.5%, 1) !default;
@@ -59,6 +63,8 @@ $ibo-color-green-600: hsla(89, 46.1%, 48%, 1) !default;
 $ibo-color-green-700: hsla(92, 47.9%, 42.2%, 1) !default;
 $ibo-color-green-800: hsla(95, 49.5%, 36.5%, 1) !default;
 $ibo-color-green-900: hsla(103, 55.6%, 26.5%, 1) !default;
+$ibo-color-green-950: hsla(108, 59.6%, 21.5%, 1) !default;
+
 
 $ibo-color-orange-100: hsla(40, 100%, 97.1%, 1) !default;
 $ibo-color-orange-200: hsla(39, 96.4%, 89%, 1) !default;
@@ -69,6 +75,7 @@ $ibo-color-orange-600: hsla(24, 74.7%, 49.6%, 1) !default;
 $ibo-color-orange-700: hsla(20, 70.7%, 44.1%, 1) !default;
 $ibo-color-orange-800: hsla(16, 65.1%, 37.1%, 1) !default;
 $ibo-color-orange-900: hsla(14, 60.8%, 30%, 1) !default;
+$ibo-color-orange-950: hsla(14, 55.1%, 22%, 1) !default;
 
 $ibo-color-red-100: hsla(0, 76.9%, 94.9%, 1) !default;
 $ibo-color-red-200: hsla(0, 95.1%, 92%, 1) !default;
@@ -79,6 +86,7 @@ $ibo-color-red-600: hsla(0, 76.3%, 57.1%, 1) !default;
 $ibo-color-red-700: hsla(0, 60.8%, 48%, 1) !default;
 $ibo-color-red-800: hsla(0, 55.8%, 39%, 1) !default;
 $ibo-color-red-900: hsla(0, 46.8%, 31%, 1) !default;
+$ibo-color-red-950: hsla(0, 42.9%, 20%, 1) !default;
 
 $ibo-color-pink-100: hsla(348, 100%, 98%, 1) !default;
 $ibo-color-pink-200: hsla(343, 95%, 92%, 1) !default;
@@ -89,6 +97,7 @@ $ibo-color-pink-600: hsla(329, 64%, 54%, 1) !default;
 $ibo-color-pink-700: hsla(325, 57%, 46%, 1) !default;
 $ibo-color-pink-800: hsla(322, 60%, 37%, 1) !default;
 $ibo-color-pink-900: hsla(318, 51%, 29%, 1) !default;
+$ibo-color-pink-950: hsla(318, 51%, 21%, 1) !default;
 
 $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pink', 'primary', 'secondary', 'information', 'success', 'warning', 'danger');
 
@@ -108,6 +117,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-grey-700: #{$ibo-color-grey-700};
 	--ibo-color-grey-800: #{$ibo-color-grey-800};
 	--ibo-color-grey-900: #{$ibo-color-grey-900};
+	--ibo-color-grey-950: #{$ibo-color-grey-950};
 
 	--ibo-color-blue-grey-50: #{$ibo-color-blue-grey-50};
 	--ibo-color-blue-grey-100: #{$ibo-color-blue-grey-100};
@@ -119,6 +129,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-blue-grey-700: #{$ibo-color-blue-grey-700};
 	--ibo-color-blue-grey-800: #{$ibo-color-blue-grey-800};
 	--ibo-color-blue-grey-900: #{$ibo-color-blue-grey-900};
+	--ibo-color-blue-grey-950: #{$ibo-color-blue-grey-950};
 
 	--ibo-color-blue-100: #{$ibo-color-blue-100};
 	--ibo-color-blue-200: #{$ibo-color-blue-200};
@@ -129,6 +140,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-blue-700: #{$ibo-color-blue-700};
 	--ibo-color-blue-800: #{$ibo-color-blue-800};
 	--ibo-color-blue-900: #{$ibo-color-blue-900};
+	--ibo-color-blue-950: #{$ibo-color-blue-950};
 
 	--ibo-color-cyan-100: #{$ibo-color-cyan-100};
 	--ibo-color-cyan-200: #{$ibo-color-cyan-200};
@@ -139,6 +151,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-cyan-700: #{$ibo-color-cyan-700};
 	--ibo-color-cyan-800: #{$ibo-color-cyan-800};
 	--ibo-color-cyan-900: #{$ibo-color-cyan-900};
+	--ibo-color-cyan-950: #{$ibo-color-cyan-950};
 
 	--ibo-color-green-100: #{$ibo-color-green-100};
 	--ibo-color-green-200: #{$ibo-color-green-200};
@@ -149,6 +162,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-green-700: #{$ibo-color-green-700};
 	--ibo-color-green-800: #{$ibo-color-green-800};
 	--ibo-color-green-900: #{$ibo-color-green-900};
+	--ibo-color-green-950: #{$ibo-color-green-950};
 
 	--ibo-color-orange-100: #{$ibo-color-orange-100};
 	--ibo-color-orange-200: #{$ibo-color-orange-200};
@@ -159,6 +173,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-orange-700: #{$ibo-color-orange-700};
 	--ibo-color-orange-800: #{$ibo-color-orange-800};
 	--ibo-color-orange-900: #{$ibo-color-orange-900};
+	--ibo-color-orange-950: #{$ibo-color-orange-950};
 
 	--ibo-color-red-100: #{$ibo-color-red-100};
 	--ibo-color-red-200: #{$ibo-color-red-200};
@@ -169,6 +184,7 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-red-700: #{$ibo-color-red-700};
 	--ibo-color-red-800: #{$ibo-color-red-800};
 	--ibo-color-red-900: #{$ibo-color-red-900};
+	--ibo-color-red-950: #{$ibo-color-red-950};
 
 	--ibo-color-pink-100: #{$ibo-color-pink-100};
 	--ibo-color-pink-200: #{$ibo-color-pink-200};
@@ -179,4 +195,5 @@ $ibo-colors: ('grey', 'blue-grey', 'blue', 'cyan', 'green', 'orange', 'red', 'pi
 	--ibo-color-pink-700: #{$ibo-color-pink-700};
 	--ibo-color-pink-800: #{$ibo-color-pink-800};
 	--ibo-color-pink-900: #{$ibo-color-pink-900};
+	--ibo-color-pink-950: #{$ibo-color-pink-950};
 }
