N°4283 Introduce SCSS variables for size and spacing

--- a/css/backoffice/utils/variables/_all.scss
+++ b/css/backoffice/utils/variables/_all.scss
@@ -8,6 +8,8 @@
 @import "depression";
 @import "elevation";
 @import "path";
+@import "size";
+@import "spacing";
 @import "typography";
 // Important: Keep this partial last as it includes variables from the previous partials
 @import "base";
