N°4283 Centralize blocks spacing between each other in block-integration

--- a/css/backoffice/application/tabular-fields/_tabular-fields-selector.scss
+++ b/css/backoffice/application/tabular-fields/_tabular-fields-selector.scss
@@ -32,5 +32,5 @@
 }
 
 #form_part_interactive_fields_xlsx, #form_part_interactive_fields_csv, #form_part_interactive_fields_pdf {
-  margin-top: $ibo-panel--spacing-top;
+  margin-top: $ibo-spacing-600;
 }
